k8s/policy-reporter/namespace-policy-reporter.yaml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "policy-reporter"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
